--- a/package.json
+++ b/package.json
@@ -27,9 +27,17 @@
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^0.1.0",
     "angularfire2": "5.0.0-rc.4",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-firebase": "git+https://github.com/jestcastro/cordova-plugin-firebase.git",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "4.8.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "npm-git-install": "^0.3.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -38,5 +46,18 @@
     "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-firebase": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
