--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/facebook": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -29,6 +30,7 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "angularfire2": "5.0.0-rc.4",
     "cordova-android": "~6.3.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "git+https://github.com/jestcastro/cordova-plugin-firebase.git",
@@ -42,7 +44,8 @@
     "npm-git-install": "^0.3.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-browser": "~5.0.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
@@ -60,10 +63,12 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "167762503832554",
         "APP_NAME": "Bakery"
-      }
+      },
+      "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
