--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@ionic-native/facebook": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/twitter-connect": "^4.5.2",
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^0.1.0",
     "angularfire2": "5.0.0-rc.4",
     "cordova-android": "~6.3.0",
+    "cordova-browser": "~5.0.3",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
@@ -44,8 +46,8 @@
     "npm-git-install": "^0.3.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-browser": "~5.0.3"
+    "twitter-connect-plugin": "git+https://github.com/chroa/twitter-connect-plugin.git",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.6",
@@ -64,7 +66,12 @@
         "APP_ID": "167762503832554",
         "APP_NAME": "Bakery"
       },
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "twitter-connect-plugin": {
+        "FABRIC_KEY": "aafdbbc5a423715a7f3914c68f220249ca2260bf",
+        "TWITTER_KEY": "4qqrcKLHzxyD9vFUuTi7HTlw5",
+        "TWITTER_SECRET": "cmAoGRrpQmmNUsE33wVWvnRXv0tBiZzewAfY0M9dlis8k6tXVY"
+      }
     },
     "platforms": [
       "android",
