--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@ionic-native/camera": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/facebook": "^4.5.2",
+    "@ionic-native/fcm": "^4.5.2",
+    "@ionic-native/native-storage": "^4.5.2",
+    "@ionic-native/push": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/twitter-connect": "^4.5.2",
@@ -37,6 +40,7 @@
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "git+https://github.com/jestcastro/cordova-plugin-firebase.git",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "4.8.0",
@@ -71,11 +75,12 @@
         "FABRIC_KEY": "aafdbbc5a423715a7f3914c68f220249ca2260bf",
         "TWITTER_KEY": "4qqrcKLHzxyD9vFUuTi7HTlw5",
         "TWITTER_SECRET": "cmAoGRrpQmmNUsE33wVWvnRXv0tBiZzewAfY0M9dlis8k6tXVY"
-      }
+      },
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
