--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/facebook": "^4.5.2",
     "@ionic-native/fcm": "^4.5.2",
+    "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
@@ -33,12 +34,15 @@
     "@ngx-translate/core": "^9.0.2",
     "@ngx-translate/http-loader": "^0.1.0",
     "angularfire2": "5.0.0-rc.4",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "git+https://github.com/jestcastro/cordova-plugin-firebase.git",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.1.0",
@@ -76,7 +80,11 @@
         "TWITTER_KEY": "4qqrcKLHzxyD9vFUuTi7HTlw5",
         "TWITTER_SECRET": "cmAoGRrpQmmNUsE33wVWvnRXv0tBiZzewAfY0M9dlis8k6tXVY"
       },
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      },
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "browser",
