--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/fcm": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/native-storage": "^4.5.2",
+    "@ionic-native/paypal": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
