--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/facebook": "^4.5.2",
     "@ionic-native/fcm": "^4.5.2",
     "@ionic-native/geolocation": "^4.5.2",
+    "@ionic-native/launch-navigator": "^4.6.0",
     "@ionic-native/native-storage": "^4.5.2",
     "@ionic-native/paypal": "^4.5.2",
     "@ionic-native/push": "^4.5.2",
@@ -41,8 +42,10 @@
     "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-android": "~6.3.0",
     "cordova-browser": "~5.0.3",
+    "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-firebase": "git+https://github.com/jestcastro/cordova-plugin-firebase.git",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -58,6 +61,7 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "twitter-connect-plugin": "git+https://github.com/chroa/twitter-connect-plugin.git",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.2.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
@@ -88,7 +92,8 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "com.paypal.cordova.mobilesdk": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {}
     },
     "platforms": [
       "browser",
